Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2148

handle_cache_operation_on_forward_server_response ignores value of api_server_response_no_store

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 4.1.2
    • TS API
    • None

    Description

      In the function HttpTransact::handle_cache_operation_on_forward_server_response there is a line that checks the value of s->api_server_response_no_store (line 4162 in HttpTransact.cc). This value will never be true, however, because is_response_cacheable is called before this check (on line 3934) and sets this value to false (on line 6104).

      Attachments

        1. ts2148_response_no_store.patch
          0.9 kB
          Corey Cossentino

        Activity

          People

            jamespeach James Peach
            dennovin Corey Cossentino
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: